appId: app.axross.juicio
---
- launchApp
- tapOn:
    id: 'tab-bar-item-presets'
- assertVisible:
    id: 'presets-empty-state'

- tapOn:
    id: 'presets-new-preset-fab'
- assertVisible:
    id: 'title'
    childOf:
      id: 'preset-editor-nav-bar'
    text: 'New Preset'

- tapOn:
    id: 'back'
    childOf:
      id: 'preset-editor-nav-bar'
- assertVisible:
    id: 'title'
    childOf:
      id: 'presets-nav-bar'
    text: 'Hand Range Preset'
- assertVisible:
    id: 'presets-empty-state'
