appId: app.axross.juicio
---
- launchApp
- assertVisible:
    id: 'analyze-add-player-fab'

- tapOn:
    id: 'analyze-add-player-fab'
- assertVisible:
    id: 'tab-cards'
    text: 'Cards'
    selected: true
- assertVisible:
    id: 'tab-handRange'
    text: 'Hand Range'
- assertVisible:
    id: 'cards-pane'

- tapOn:
    id: 'tab-handRange'
- assertVisible:
    id: 'tab-handRange'
    selected: true
- assertVisible:
    id: 'hand-range-pane'

- tapOn:
    id: 'handle'
- assertVisible:
    id: 'title'
    childOf:
      id: 'analyze-nav-bar'
    text: 'Analyze'
- assertVisible:
    id: 'analyze-empty-state'
